feat : 당첨 번호, 보너스 번호 입력 구현
toList()로 생성 시 불변 객체, 정렬 시 새로운 리스트에 복사해서 정렬해야하는 번거로움 발생.